kubernetes/monitoring/alertmanager/basicauth.yml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: alertmanager-auth
  namespace: monitoring
spec:
  basicAuth:
    secret: alertmanager-basicauth
